nginx-tomcat/ansible/roles/iptables/templates/iptables
# Generated by iptables-save v1.6.0 on Sun Mar 25 15:27:43 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -j ACCEPT
# ngrep -W byline -d any port not 80 and not 443 and not 22 and not 53
# watch iptables -L -v
# TODO ansible is not able to run again after rules are defined
#-A INPUT -j DROP
-A OUTPUT -o eth0 -p tcp  -m tcp --dport 514 -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Sun Mar 25 15:27:43 2018
